--- a/vRABot/Web.config
+++ b/vRABot/Web.config
@@ -6,8 +6,8 @@
 <configuration>
   <appSettings>
     <!-- update these with your appid and one of your appsecret keys-->
-    <add key="AppId" value="YourAppId" />
-    <add key="AppSecret" value="YourAppSecret" />
+    <add key="AppId" value="vrabot" />
+    <add key="AppSecret" value="a7cb34ead8f54d9d9eefabc0594129ae" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
