--- a/vRABot/vRABot.csproj
+++ b/vRABot/vRABot.csproj
@@ -111,11 +111,14 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Conversations\CatalogDialog.cs" />
+    <Compile Include="Conversations\ServerInfo.cs" />
     <Compile Include="vRA\APIClientHelper.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="vRA\TokenExpiredException.cs" />
+    <Compile Include="vRA\vRAServer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
