--- a/vRABot/vRABot.csproj
+++ b/vRABot/vRABot.csproj
@@ -111,7 +111,8 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Conversations\CatalogDialog.cs" />
-    <Compile Include="Conversations\ServerInfo.cs" />
+    <Compile Include="Conversations\CatalogItemForm.cs" />
+    <Compile Include="Conversations\ServerInfoForm.cs" />
     <Compile Include="vRA\APIClientHelper.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
