Adds request status check into the vRA API helper
Changes the exception handling.

--- a/vRABot/vRABot.csproj
+++ b/vRABot/vRABot.csproj
@@ -118,7 +118,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="vRA\TokenExpiredException.cs" />
+    <Compile Include="vRA\APIClientException.cs" />
+    <Compile Include="vRA\APIClientUnathorizedException.cs" />
     <Compile Include="vRA\vRAServer.cs" />
   </ItemGroup>
   <ItemGroup>
